--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@tanstack/react-query": "^5.18.1",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-datepicker": "^4.19.5",
-    "axios": "^1.6.5",
+    "axios": "^1.6.7",
+    "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^4.25.0",
@@ -25,6 +27,7 @@
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
+    "@tanstack/react-query-devtools": "^5.18.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
