--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-datepicker": "^4.19.5",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.1",
     "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
